[package]
name = "camo-url"
version = "0.1.0"
authors = ["Cult Pony"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2"
securefmt = "0.1.1"
hex = "0.4.3"
hmac = { version = "0.10.1", features = ["std"] }
crypto-hashes = { version = "0.9.0", features = ["include_weak"] }